updated meta data

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-GB">
   <head>
     <meta charset="utf-8">
-    <title>webpage title</title>
+    <title>Website Design System</title>
     <meta name="author" content="Simone Waring">
-<meta name="description" content="">
+<meta name="description" content="A Codecademy Project to Website Design System based on colours and fonts of my own choosing.">
     <link rel="stylesheet" href="styles.css" >
   </head>
   <body>
@@ -53,6 +53,7 @@ How I wonder what you are</p></div>
   background-color: #939597;
   color: #e9eaea;
   font-family: Hachi Maru Pop Regular;
+  font-size: 1.15em;
 }</code></pre>
       <p class="bellota p">paragraph copy</p>
       <pre><code>p {
@@ -60,6 +61,14 @@ How I wonder what you are</p></div>
   color: #4a4b4c;
   font-family: Bellota;
 }</code></pre>
+      <p class="bebas foot">footer</p>
+      <pre><code>footer {
+  background-color: #4a4b4c;
+  color: #f5e78a;
+  font-family: Bebas Neue Regular;
+  font-size: 0.9em;
+}
+</code></pre>
     </section>
     <section>
         <h2>Page Mock-up</h2>
