update image code

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ How I wonder what you are</p></div>
     </section>
     <section>
         <h2>Page Mock-up</h2>
-      <img src="website-design-system.jpg" alt="mock-up" />
+      <img src="website-design-system.jpg" alt="mock-up" height="834" width="559" />
     </section>
   </body>
 </html>
